# airbyte-api/src/main/openapi/config.yaml
@@ -44,8 +44,8 @@ tags:
     description: DestinationDefinition related resources.
   - name: destination_definition_specification
     description: DestinationDefinitionSpecification related resources.
-  - name: destination_implementation
-    description: Destination implementation related resources.
+  - name: destination
+    description: Destination  related resources.
   - name: connection
     description: Connection between sources and destinations.
   - name: web_backend
@@ -462,17 +462,17 @@ paths:
         "422":
           $ref: "#/components/responses/InvalidInput"
   # DESTINATIONS
-  /v1/destination_implementations/create:
+  /v1/destinations/create:
     post:
       tags:
-        - destination_implementation
-      summary: Create a destination implementation
-      operationId: createDestinationImplementation
+        - destination
+      summary: Create a destination
+      operationId: createDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationCreate"
+              $ref: "#/components/schemas/DestinationCreate"
         required: true
       responses:
         "200":
@@ -480,20 +480,20 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationImplementationRead"
+                $ref: "#/components/schemas/DestinationRead"
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/destination_implementations/update:
+  /v1/destinations/update:
     post:
       tags:
-        - destination_implementation
-      summary: Update a destination implementation
-      operationId: updateDestinationImplementation
+        - destination
+      summary: Update a destination
+      operationId: updateDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationUpdate"
+              $ref: "#/components/schemas/DestinationUpdate"
         required: true
       responses:
         "200":
@@ -501,15 +501,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationImplementationRead"
+                $ref: "#/components/schemas/DestinationRead"
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/destination_implementations/list:
+  /v1/destinations/list:
     post:
       tags:
-        - destination_implementation
+        - destination
       summary: List configured destinations for a workspace
-      operationId: listDestinationImplementationsForWorkspace
+      operationId: listDestinationsForWorkspace
       requestBody:
         content:
           application/json:
@@ -522,22 +522,22 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationImplementationReadList"
+                $ref: "#/components/schemas/DestinationReadList"
         "404":
           description: Workspace not found
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/destination_implementations/get:
+  /v1/destinations/get:
     post:
       tags:
-        - destination_implementation
+        - destination
       summary: get configured destination
-      operationId: getDestinationImplementation
+      operationId: getDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationIdRequestBody"
+              $ref: "#/components/schemas/DestinationIdRequestBody"
         required: true
       responses:
         "200":
@@ -545,22 +545,22 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationImplementationRead"
+                $ref: "#/components/schemas/DestinationRead"
         "404":
-          description: Destination Implementation not found
+          description: Destination  not found
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/destination_implementations/check_connection:
+  /v1/destinations/check_connection:
     post:
       tags:
-        - destination_implementation
-      summary: Check connection to the destination implementation
-      operationId: checkConnectionToDestinationImplementation
+        - destination
+      summary: Check connection to the destination
+      operationId: checkConnectionToDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationIdRequestBody"
+              $ref: "#/components/schemas/DestinationIdRequestBody"
         required: true
       responses:
         "200":
@@ -570,33 +570,33 @@ paths:
               schema:
                 $ref: "#/components/schemas/CheckConnectionRead"
         "404":
-          description: Destination Implementation not found
+          description: Destination  not found
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/destination_implementations/delete:
+  /v1/destinations/delete:
     post:
       tags:
-        - destination_implementation
-      summary: Delete the destination implementation
-      operationId: deleteDestinationImplementation
+        - destination
+      summary: Delete the destination
+      operationId: deleteDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationIdRequestBody"
+              $ref: "#/components/schemas/DestinationIdRequestBody"
         required: true
       responses:
         "204":
           description: The resource was deleted successfully.
         "404":
-          description: Destination Implementation not found
+          description: Destination  not found
         "422":
           $ref: "#/components/responses/InvalidInput"
   /v1/connections/create:
     post:
       tags:
         - connection
-      summary: Create a connection between a source and a destination implementation
+      summary: Create a connection between a source and a destination
       operationId: createConnection
       requestBody:
         content:
@@ -792,17 +792,17 @@ paths:
                 $ref: "#/components/schemas/SourceRead"
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/web_backend/destination_implementations/recreate:
+  /v1/web_backend/destinations/recreate:
     post:
       tags:
         - web_backend
-      summary: Recreate a destination implementation
-      operationId: webBackendRecreateDestinationImplementation
+      summary: Recreate a destination
+      operationId: webBackendRecreateDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationRecreate"
+              $ref: "#/components/schemas/DestinationRecreate"
         required: true
       responses:
         "200":
@@ -810,20 +810,20 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationImplementationRead"
+                $ref: "#/components/schemas/DestinationRead"
         "422":
           $ref: "#/components/responses/InvalidInput"
-  /v1/web_backend/destination_implementations/create:
+  /v1/web_backend/destinations/create:
     post:
       tags:
         - web_backend
-      summary: Create a destination implementation
-      operationId: webBackendCreateDestinationImplementation
+      summary: Create a destination
+      operationId: webBackendCreateDestination
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/DestinationImplementationCreate"
+              $ref: "#/components/schemas/DestinationCreate"
         required: true
       responses:
         "200":
@@ -831,7 +831,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/DestinationImplementationRead"
+                $ref: "#/components/schemas/DestinationRead"
         "422":
           $ref: "#/components/responses/InvalidInput"
   /v1/jobs/list:
@@ -1219,21 +1219,21 @@ components:
           type: string
         connectionSpecification:
           $ref: "#/components/schemas/DestinationDefinitionSpecification"
-    # DESTINATION IMPLEMENTATION
-    DestinationImplementationId:
+    # DESTINATION
+    DestinationId:
       type: string
       format: uuid
-    DestinationImplementationIdRequestBody:
+    DestinationIdRequestBody:
       type: object
       required:
-        - destinationImplementationId
+        - destinationId
       properties:
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
     DestinationConfiguration:
       description: The values required to configure the destination. The schema for this must match the schema return by destination_definition_specifications/get for the destinationDefinition.
       example: { user: "charles" }
-    DestinationImplementationCreate:
+    DestinationCreate:
       type: object
       required:
         - workspaceId
@@ -1248,40 +1248,40 @@ components:
           $ref: "#/components/schemas/DestinationConfiguration"
         name:
           type: string
-    DestinationImplementationRecreate:
+    DestinationRecreate:
       type: object
       required:
         - workspaceId
-        - destinationImplementationId
+        - destinationId
         - connectionConfiguration
         - name
       properties:
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
         workspaceId:
           $ref: "#/components/schemas/WorkspaceId"
         connectionConfiguration:
           $ref: "#/components/schemas/DestinationConfiguration"
         name:
           type: string
-    DestinationImplementationUpdate:
+    DestinationUpdate:
       type: object
       required:
-        - destinationImplementationId
+        - destinationId
         - connectionConfiguration
         - name
       properties:
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
         connectionConfiguration:
           $ref: "#/components/schemas/DestinationConfiguration"
         name:
           type: string
-    DestinationImplementationRead:
+    DestinationRead:
       type: object
       required:
         - destinationDefinitionId
-        - destinationImplementationId
+        - destinationId
         - workspaceId
         - connectionConfiguration
         - name
@@ -1289,8 +1289,8 @@ components:
       properties:
         destinationDefinitionId:
           $ref: "#/components/schemas/DestinationDefinitionId"
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
         workspaceId:
           $ref: "#/components/schemas/WorkspaceId"
         connectionConfiguration:
@@ -1299,7 +1299,7 @@ components:
           type: string
         destinationName:
           type: string
-    DestinationImplementationReadList:
+    DestinationReadList:
       type: object
       required:
         - destinations
@@ -1307,7 +1307,7 @@ components:
         destinations:
           type: array
           items:
-            $ref: "#/components/schemas/DestinationImplementationRead"
+            $ref: "#/components/schemas/DestinationRead"
     # CONNECTION
     ConnectionId:
       type: string
@@ -1323,7 +1323,7 @@ components:
       type: object
       required:
         - sourceId
-        - destinationImplementationId
+        - destinationId
         - syncMode
         - status
       properties:
@@ -1332,8 +1332,8 @@ components:
           description: Optional name of the connection
         sourceId:
           $ref: "#/components/schemas/SourceId"
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
         syncMode:
           type: string
           enum:
@@ -1366,7 +1366,7 @@ components:
         - connectionId
         - name
         - sourceId
-        - destinationImplementationId
+        - destinationId
         - syncMode
         - syncSchema
         - status
@@ -1377,8 +1377,8 @@ components:
           type: string
         sourceId:
           $ref: "#/components/schemas/SourceId"
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
         syncMode:
           type: string
           enum:
@@ -1595,7 +1595,7 @@ components:
         - connectionId
         - name
         - sourceId
-        - destinationImplementationId
+        - destinationId
         - syncMode
         - syncSchema
         - status
@@ -1608,8 +1608,8 @@ components:
           type: string
         sourceId:
           $ref: "#/components/schemas/SourceId"
-        destinationImplementationId:
-          $ref: "#/components/schemas/DestinationImplementationId"
+        destinationId:
+          $ref: "#/components/schemas/DestinationId"
         syncMode:
           type: string
           enum:
